--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
             <version>8.0.19</version> <!-- ou une version compatible avec votre MySQL -->
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.webflow</groupId>
             <artifactId>spring-webflow</artifactId>
             <version>2.5.1.RELEASE</version>
