--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,11 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.ser
 app.jwtSecret=MaCleSecreteTresComplexe1234
 app.jwtExpirationInMs=300000
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=eliott.laurens@limayrac.fr
+spring.mail.password=ivqg ebao dcud ksco
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
